--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "weather-app",
   "version": "1.0.0",
+  "private": true,
   "scripts": {
     "dev:server": "npm --prefix server run dev",
     "dev:web": "npm --prefix web run dev",
-    "dev": "concurrently \"npm run dev:server\" \"npm run dev:web\""
+    "dev": "concurrently \"npm run dev:server\" \"npm run dev:web\"",
+    "install-all": "npm install && cd web && npm install",
+    "build": "cd web && npm run build",
+    "start": "node server/src/index.js"
   },
   "devDependencies": {
     "concurrently": "^9.2.1"
