--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev:server": "npm --prefix server run dev",
     "dev:web": "npm --prefix web run dev",
     "dev": "concurrently \"npm run dev:server\" \"npm run dev:web\"",
-    "install-all": "npm install && cd web && npm install",
+    "install-all": "npm install && npm --prefix web install",
     "build": "cd web && npm run build",
     "start": "node server/src/index.js"
   },
