--- a/web/package.json
+++ b/web/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.9.5"
+    "react-router-dom": "^7.9.5",
+    "vite": "^7.1.7"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.28.5",
