--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "node server/src/index.js"
   },
   "devDependencies": {
-    "concurrently": "^9.2.1",
+    "concurrently": "^9.2.1"
   }
 }
 
