--- a/web/package.json
+++ b/web/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.9.5"
+    "react-router-dom": "^7.9.5",
+    "vite": "^7.1.7"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.28.5",
@@ -32,7 +33,6 @@
     "globals": "^16.4.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^30.2.0",
-    "jest-environment-jsdom": "^30.2.0",
-    "vite": "^7.1.7"
+    "jest-environment-jsdom": "^30.2.0"
   }
 }
