--- a/web/package.json
+++ b/web/package.json
@@ -14,7 +14,8 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.5",
-    "vite": "^7.1.7"
+    "vite": "^7.1.7",
+    "@vitejs/plugin-react": "^5.0.4"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.28.5",
@@ -25,7 +26,7 @@
     "@testing-library/user-event": "^14.6.1",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
-    "@vitejs/plugin-react": "^5.0.4",
+    
     "babel-jest": "^30.2.0",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
